<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/send_mab_lib_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="53dp"
        android:text="@string/send_mad_lib"
        app:layout_constraintBottom_toTopOf="@+id/new_mad_lib_button_id"
        app:layout_constraintEnd_toStartOf="@+id/add_photo_button_id"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_photo_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="61dp"
        android:text="@string/add_photo"
        app:layout_constraintBottom_toTopOf="@+id/reset_button_id"
        app:layout_constraintStart_toEndOf="@+id/send_mab_lib_button_id" />

    <Button
        android:id="@+id/new_mad_lib_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="67dp"
        android:text="@string/new_mad_lib"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reset_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="59dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/new_mad_lib_button_id" />

    <TextView
        android:id="@+id/mad_lib_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="164dp"
        android:text="@string/mab_lib_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>